# options-portfolio-risk-hedging-natural-gas

./: CMakeLists.txt  CMakePresets  CMakePresets.json  README.md  main.cpp
include/core/: Engine.hpp
src/: __init__.py
src/core/: Engine.cpp  StorageController.cpp
src/optimization/: MeanVarianceOptimizer.cpp
src/options/: short_call.py  short_put.py
src/storage/: battery.py  p2g.py
tests/: CMakeLists.txt
